# pc-analyser

./: .gitignore  CHANGELOG.md  README.md  build_windows.py  pyproject.toml  requirements.txt
pc_analyser/: __init__.py  alerts.py  cli.py  config.py  display.py  lhm_setup.py  storage.py  tui.py  wsl_bridge.py
pc_analyser/collectors/: __init__.py  battery.py  cpu.py  gpu.py  memory.py  motherboard.py  network.py  processes.py  storage.py  system.py  thermal.py
pc_analyser/web/: __init__.py  server.py
pc_analyser/web/static/: app.js  style.css
pc_analyser/web/templates/: index.html
tests/: test_all.py
